backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app-tst
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: leerndregistryname.azurecr.io/be_devops:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: acr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app-tst
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
